Fixed #49: top bar wasn't displayed on Firefox for Android

--- a/TangerineUI-purple.css
+++ b/TangerineUI-purple.css
@@ -1,5 +1,5 @@
 /*  TangerineUI 🍊 for Mastodon ・ Purple variant 🪻
-    version: 1.8
+    version: 1.8.4
 
     A Tangerine redesign for Mastodon's Web UI.
     https://github.com/nileane/TangerineUI-for-Mastodon/
